--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
         justify-self: end;
       }
     </style>
+
   </head>
   <body>
+    
     <div id="main">
       <div id="heading">
         <h1>The Loneliest Chatroom</h1>
@@ -89,8 +91,8 @@
       </div>
       <form><input type="text"/></form>
       <button>I'm feeling Lonely!</button>
+      <script type = "text/javascript" src = "index.js"></script>
     </div>
-    <script>
-    </script>
+    
   </body>
 </html>
