--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
           <span>10:22</span>
           <span class="sender">Myself:</span>
           <span>Is it me you're looking for?</span>
-          <span class="delete">❌</span>
+          <span class="delete" onclick='deleteMessage(2)'>❌</span>
         </div>
         <div class="message" id="1">
           <span>10:21</span>
           <span class="sender">Me:</span>
           <span>Hello?</span>
-          <span class="delete">❌</span>
+          <span class="delete" onclick='deleteMessage(1)'>❌</span>
         </div>
       </div>
       <form><input type="text"/></form>
